configurado atributos datasource

--- a/demosqlite/src/main/resources/application.yml
+++ b/demosqlite/src/main/resources/application.yml
@@ -4,5 +4,10 @@ spring:
     hibernate:
       ddl-auto: none
       naming-strategy: org.hibernate.cfg.EJB3NamingStrategy
+  local:
+    data-source:
+      driver-class-name: org.sqlite.JDBC
+      url: jdbc:sqlite:../db/chinook.db
 server:
   port: 8550
+
